# amber-lang

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/amber_analysis/: Cargo.toml
crates/amber_ast/: Cargo.toml
crates/amber_ast/src/: lib.rs
crates/amber_ast/src/decl/: _struct.rs  function.rs  impl_block.rs  mod.rs
crates/amber_ast/src/expr/: binary.rs  mod.rs  unary.rs
crates/amber_ast/src/expr/literal/: mod.rs  numeric.rs
crates/amber_ast/src/program/: mod.rs
crates/amber_ast/src/stmt/: bindings.rs  control.rs  mod.rs
crates/amber_ast/src/types/: builtin.rs  mod.rs
crates/amber_cli/: Cargo.toml
crates/amber_cli/src/: lib.rs  main.rs
crates/amber_cli/tests/: external_cli_tests.rs
crates/amber_codegen/: Cargo.toml
crates/amber_codegen/src/: buffer.rs  declarations.rs  errors.rs  expression.rs  lib.rs  statements.rs  types.rs
crates/amber_codegen/tests/: external_codegen_tests.rs
crates/amber_parser/: Cargo.toml
crates/amber_parser/src/: decl_parser.rs  error.rs  expr_parser.rs  grammar.pest  lib.rs  pratt.rs  stmt_parser.rs  utils.rs
crates/amber_vm/: Cargo.toml
test_fixtures/: complex_example.amb  control_flow.amb  functions.amb  pointer.amb  structs.amb  variables.amb
